public/css/taskbook2.css
.fleft{
    float:left;
    margin-left: 5px;
    margin-right: 5px;
}

.buttoncenter{
    margin-top:10px
}

.fright{
    float:right;
    margin-right: 5px;
    margin-left: 5px;
}

.logo{
    position: absolute;
    margin:  0 auto;
    width: 100%;
    text-align: center;
}

.logotext{
    width: 120px;
}

.groupTitle{
    padding-left: 2.5%;
    padding-right: 2.5%;
    margin-bottom:4px;
    width:inherit;
    height:50px;
    text-align: center;
}

.groupTitleText{
    position:absolute;
    text-align: center;
    text-overflow:ellipsis;
    margin-top: 15px;
    font-size: 17px;
    font-weight: bold;
    width:100%;
    height:inherit;
    overflow: hidden;


}

.groupTitleText h2{
    font-size: 20px;
}


.groupBtn{
    width: 45px;
    height:33px;
    text-align: center;
    padding-left: 15px;
    padding-right:15px;
    background-image: linear-gradient(to bottom,#fff 0,#fff 100%);
    background-repeat: repeat;

}

.btn{
    padding: 8px 15px;
}
.groupBtnIcon{

    /*right:7px;*/

}
.navbar{
    margin-bottom: 2px;
    background-image: linear-gradient(to bottom,#FFB140 0,#FFB140 100%);
}



.pin{
    margin-top:3px
}

.list{
    padding-left: 2.5%;
    padding-right:2.5%;
}

#addgrouplists{
    margin-left: 2.5%;
    margin-right:2.5%;
    /*height: 45px;*/
    background-color: #FFE4BE; 
}

#editgroup{
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    top: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: auto;
    /* give it dimensions */
    min-height: 10em;
    width: 95%;
    height: 450px;
    clear:both;
    text-align: center;
    overflow: hidden;
    display:none;
    position:fixed;
    z-index:1040;
    background-color:white;
    background-image: linear-gradient(to bottom,#FFEBD0 0,#FFEBD0 100%);
}

#editgrouptitle{
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    top: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: auto;
    /* give it dimensions */
    min-height: 10em;
    width: 95%;
    height: 450px;
    clear:both;
    text-align: center;
    overflow: hidden;
    display:none;
    position:fixed;
    z-index:1040;
    background-color:white;
     background-image:  linear-gradient(to bottom,#FFEBD0 0,#FFEBD0 100%);
}

#editlistname{
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    top: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: auto;
    /* give it dimensions */
    min-height: 10em;
    width: 95%;
    height: 450px;
    clear:both;
    text-align: center;
    overflow: hidden;
    display:none;
    position:fixed;
    z-index:1040;
    background-color:white;
    background-image:  linear-gradient(to bottom,#FFEBD0 0,#FFEBD0 100%);
}

#addlisttext{
    text-align: center;
    font-weight:bold;

}

.addlistinput{
    width: inherit;
    margin-top: 10px;
    margin-bottom:auto;
    background-color: transparent;  
    border-style: solid;  
    border-width: 0px 0px 1px 0px;  
    border-color: blue; 
    outline:0; 
}


#addlistinputform{
    width: 70%;
    margin-right: auto;
    margin-left: auto;
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    height: inherit;
    display: none;
}

#addgrouplistsarea{
    width: inherit;
    height: inherit;
}


.addlistinput{
    width: inherit;
    margin-top: 10px;
    margin-bottom:auto;
    background-color: transparent;  
    border-style: solid;  
    border-width: 0px 0px 1px 0px;  
    border-color: blue; 
    outline:0; 
    height:35px;
}

.addtaskinputform{
    width: 70%;
    margin-right: auto;
    margin-left: auto;
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    height: 41px;
    display: none;
}
.addtaskinput{
    width: inherit;
    margin-top: 10px;
    margin-bottom:auto;
    background-color: transparent;  
    border-style: solid;  
    border-width: 0px 0px 1px 0px;  
    border-color: blue; 
    outline:0; 
}
#addlistinputform{
    width: 70%;
    margin-right: auto;
    margin-left: auto;
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    height: inherit;
    display: none;
    height: 50px;
}

.membercontainer {
  margin-right: auto;
  margin-left: auto;
  width:200px;
  height:200px;
  overflow-y:scroll;
  -webkit-overflow-scrolling:touch;
}
.addMemberPanel{
    margin-right: auto;
    margin-left: auto;
    width:200px;    
    display:block;
}

.addmemberinputform
{
    margin-right: auto;
    margin-left: auto;
    margin-top: 10px;
    display:block;
}
.addmemberinput
{
    width: 100px;
    margin-top: -10px;
    margin-bottom:auto;
    background-color: white;  
    border-style: solid;  
    border-width: 0px 0px 1px 0px;  
    border-color: blue; 
    outline:0; 
    
}
.hover {
-webkit-user-select: none;
-webkit-touch-callout: none;   /*prevent copy paste popups on hover*/     
}
.editGroupHeader
{
    font-size:2.5em;
    margin-right: auto;
    margin-left: auto;
    width: 250px;
    height: 55px;
    display:none;
}

#newFilter{
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    top: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: auto;
    /* give it dimensions */
    min-height: 10em;
    width: 95%;
    height: 95%;
    clear:both;
    text-align: center;
    overflow: hidden;
    display:none;
    position:fixed;
    z-index:1040;
    background-color:white;
    background-image: linear-gradient(to bottom,#FFEBD0 0,#FFEBD0 100%);
}

#editTask{
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    top: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: auto;
    /* give it dimensions */
    min-height: 10em;
    width: 95%;
    height: 95%;
    clear:both;
    text-align: center;
    overflow: hidden;
    display:none;
    position:fixed;
    z-index:1040;
    background-color:white;
    /*background-image: linear-gradient(to bottom,#d9edf7 0,#d9edf7 100%);*/
    background-image:  linear-gradient(to bottom,#FFEBD0 0,#FFEBD0 100%);
}

#editProfile{
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    top: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: auto;
    /* give it dimensions */
    min-height: 10em;
    width: 95%;
    height: 95%;
    clear:both;
    text-align: center;
    overflow: hidden;
    display:none;
    position:fixed;
    z-index:1040;
    background-color:white;
    /*background-image: linear-gradient(to bottom,#d9edf7 0,#d9edf7 100%);*/
     background-image:  linear-gradient(to bottom,#FFEBD0 0,#FFEBD0 100%);
}
#addGroup{
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    top: 0;
    bottom: 0;
    margin-top: auto;
    margin-bottom: auto;
    /* give it dimensions */
    min-height: 10em;
    width: 95%;
    height: 95%;
    clear:both;
    text-align: center;
    overflow: hidden;
    display:none;
    position:fixed;
    z-index:1040;
    background-color:white;
    background-image: linear-gradient(to bottom,#d9edf7 0,#d9edf7 100%);
}
#profileForm {
    width:100%;
}

#profilediv {
    width:inherit;
}

#profileForm input {
    width:inherit;
}

.deleteList{
    width: 20px;
    height: 20px;
    float: right;
}
.editlist{
    float:right;
    margin-right:20px;
    margin-top:2px;
    display:none;
}
.xdays{
    width:20px;
    height: 20px;
}
.deleteFilter{
    width: 20px;
    height: 20px;
    float: right;
}

#settingsButton{
    background-image: none;
}
#myGroupsButton{
    background-image:none;
}
#dropdownContactName{
    font-weight: bold;
    font-size:15px;
}
#dropdownGroupName{
    font-weight: bold;
    font-size:15px;
}

#addgrouparea{
    font-size:15px;
}
#mysettingsdropdown{
    font-size:15px;
}
#taskTitle{
    width:100%;
    height:30px;
    font-size:15px;
    margin: 0 0 10px 0;
    padding: 3px;
}
#taskDescription{
    width:100%;
    height:30px;
    font-size:15px;
    margin: 0 0 10px 0;
    padding: 3px;
}
#taskDueDate{
    width:100%;

}
.datepicker {
    width:85%;
    margin-bottom:15px;
}
#taskStatus{
    width:100%;
    height:30px;
    margin-bottom:15px;
}
#taskPriority{
     width:100%;
    height:30px;
}
.editgrouptitle{
   text-align:right;
   float:right;
   
   clear:both;
}
#filterName{
    width:100%;
    margin-bottom:15px;
    height:30px;
}
#xDays{
    height:30px;
    width:45px;
}

#priority_{
     width:100%;
    height:30px;
    margin-bottom:15px;
}

#listnavbar{
    background-image: linear-gradient(to bottom,#FFE4BE 0,#FFE4BE 100%);
}

body{
    background-color:#FFF5E7;
}

.pencilColor{
    display:block;
    opacity: 0.4;
    margin-top:5px;
}

.buttonsColor{
    background-color: #FFD633;
}

.thecenter{
     margin-left: auto;
    margin-right: auto;
    display:block;
}

.orange-btn {
  background-color: hsl(47, 100%, 47%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffcb0f", endColorstr="#efbb00");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#ffcb0f), to(#efbb00));
  background-image: -moz-linear-gradient(top, #ffcb0f, #efbb00);
  background-image: -ms-linear-gradient(top, #ffcb0f, #efbb00);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffcb0f), color-stop(100%, #efbb00));
  background-image: -webkit-linear-gradient(top, #ffcb0f, #efbb00);
  background-image: -o-linear-gradient(top, #ffcb0f, #efbb00);
  background-image: linear-gradient(#ffcb0f, #efbb00);
  border-color: #efbb00 #efbb00 hsl(47, 100%, 45.5%);
  color: #333 !important;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.09);
  -webkit-font-smoothing: antialiased;
}

